--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/shalant/mern-youtube-notetaker/issues"
   },
-  "homepage": "https://github.com/shalant/mern-youtube-notetaker#readme"
+  "homepage": "https://github.com/shalant/mern-youtube-notetaker#readme",
+  "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "react-youtube": "^7.13.1"
+  }
 }
