--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/shalant/mern-youtube-notetaker#readme",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "react-router-dom": "^5.2.0",
     "react-youtube": "^7.13.1"
   }
 }
